# sigstore-rust

./: Cargo.toml  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: check-embedded-root.yml  ci.yml  interop.yml  release-plz.yml  tuf-conformance.yml
crates/sigstore-bundle/: CHANGELOG.md  Cargo.toml
crates/sigstore-bundle/src/: builder.rs  error.rs  lib.rs  validation.rs
crates/sigstore-bundle/tests/: bundle_versions_tests.rs
crates/sigstore-bundle/tests/fixtures/: bundle_v3_jdx_communique.json
crates/sigstore-cache/: CHANGELOG.md  Cargo.toml
crates/sigstore-cache/src/: filesystem.rs
crates/sigstore-conformance/: Cargo.toml
crates/sigstore-conformance/src/: main.rs
crates/sigstore-crypto/: CHANGELOG.md  Cargo.toml
crates/sigstore-crypto/src/: checkpoint.rs  error.rs  hash.rs  lib.rs  signing.rs  verification.rs  x509.rs
crates/sigstore-fulcio/: Cargo.toml
crates/sigstore-merkle/: CHANGELOG.md  Cargo.toml
crates/sigstore-merkle/src/: proof.rs  tree.rs
crates/sigstore-oidc/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-oidc/src/: oauth.rs  token.rs
crates/sigstore-protobuf-compat/: Cargo.toml
crates/sigstore-protobuf-compat/src/: lib.rs
crates/sigstore-protobuf-compat/tests/: protobuf_compat.rs
crates/sigstore-rekor/: Cargo.toml
crates/sigstore-sign/: CHANGELOG.md  Cargo.toml
crates/sigstore-sign/examples/: sign_attestation.rs  sign_blob.rs
crates/sigstore-sign/src/: error.rs  lib.rs  sign.rs
crates/sigstore-trust-root/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-trust-root/examples/: trust-instance.rs  update-embedded-roots.rs
crates/sigstore-trust-root/repository/: tuf_github_root.json
crates/sigstore-trust-root/src/: lib.rs  signing_config.rs  time_range.rs  trusted_root.rs  trusted_root_github.json  tuf.rs
crates/sigstore-trust-root/tests/: tuf_bootstrap.rs
crates/sigstore-tsa/: CHANGELOG.md  Cargo.toml
crates/sigstore-tsa/src/: asn1.rs  client.rs  verify.rs
crates/sigstore-tsa/test_data/timestamps/: github_sha384_bundle.json  github_trusted_root.json
crates/sigstore-tuf/: CHANGELOG.md  Cargo.toml  README.md  conformance.xfails
crates/sigstore-tuf/examples/: conformance_client.rs
crates/sigstore-tuf/src/: cache.rs  canonical_json.rs  client.rs  error.rs  glob.rs  key.rs  lib.rs  transport.rs  trusted.rs
crates/sigstore-tuf/src/metadata/: mod.rs  role.rs  snapshot.rs  targets.rs
crates/sigstore-tuf/tests/: end_to_end.rs  reference_impl.rs  roots.rs
crates/sigstore-tuf/tests/data/: .gitattributes  ATTRIBUTION.md
crates/sigstore-types/: CHANGELOG.md  Cargo.toml
crates/sigstore-types/src/: artifact.rs  bundle.rs  encoding.rs  intoto.rs  lib.rs
crates/sigstore-types/test_data/: cosign_v3_missing_fields.json
crates/sigstore-verify/: CHANGELOG.md  Cargo.toml  README.md
crates/sigstore-verify/examples/: verify_bundle.rs  verify_conda_attestation.rs
crates/sigstore-verify/src/: lib.rs  verify.rs
crates/sigstore-verify/src/verify_impl/: hashedrekord.rs  helpers.rs  mod.rs  rekor.rs  sct.rs  tlog.rs
crates/sigstore-verify/test_data/bundles/: conda-attestation-rekor2.sigstore.json
crates/sigstore-verify/test_data/sct-multi-intermediate/: staging_bundle.sigstore.json
crates/sigstore-verify/tests/: verification_tests.rs
scripts/: check-native-tls.sh
