[package]
name = "sigstore-bundle"
description = "Bundle format handling for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rustls"]
rustls = ["sigstore-tsa/rustls", "sigstore-rekor/rustls", "sigstore-crypto/rustls", "sigstore-merkle/rustls"]
native-tls = ["sigstore-tsa/native-tls", "sigstore-rekor/native-tls", "sigstore-crypto/native-tls", "sigstore-merkle/native-tls"]

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
sigstore-merkle = { workspace = true }
sigstore-tsa = { workspace = true, default-features = false }
sigstore-rekor = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
