[package]
name = "sigstore-crypto"
description = "Cryptographic primitives for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rustls"]
rustls = ["dep:aws-lc-rs"]
native-tls = ["dep:ring"]

[dependencies]
sigstore-types = { workspace = true }
aws-lc-rs = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
sha2 = { workspace = true }
digest = { workspace = true }
signature = { workspace = true }
rand_core = { workspace = true }
der = { workspace = true }
spki = { workspace = true }
const-oid = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
pem = { workspace = true }
x509-cert = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
