[package]
name = "sigstore-fulcio"
description = "Fulcio certificate authority client for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls", "sigstore-oidc/rustls", "sigstore-crypto/rustls"]
native-tls = ["reqwest/native-tls", "sigstore-oidc/native-tls", "sigstore-crypto/native-tls"]
cache = ["sigstore-cache"]

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
sigstore-oidc = { workspace = true }
sigstore-cache = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true }
