[package]
name = "sigstore-oidc"
description = "OpenID Connect identity provider for Sigstore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rustls", "browser"]
rustls = ["reqwest/rustls", "ambient-id/rustls", "sigstore-crypto/rustls"]
native-tls = ["reqwest/native-tls", "ambient-id/native-tls", "sigstore-crypto/native-tls"]
# Enable automatic browser opening for authentication
browser = ["dep:open"]

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
ambient-id = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
open = { workspace = true, optional = true }

[dev-dependencies]
