[package]
name = "sigstore-sign"
description = "Sigstore signature creation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }
sigstore-bundle = { workspace = true }
sigstore-rekor = { workspace = true }
sigstore-fulcio = { workspace = true }
sigstore-oidc = { workspace = true }
sigstore-tsa = { workspace = true }
sigstore-trust-root = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
x509-cert = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

[features]
default = ["rustls", "browser"]
rustls = [
  "sigstore-bundle/rustls",
  "sigstore-rekor/rustls",
  "sigstore-fulcio/rustls",
  "sigstore-oidc/rustls",
  "sigstore-tsa/rustls",
]
native-tls = [
  "sigstore-bundle/native-tls",
  "sigstore-rekor/native-tls",
  "sigstore-fulcio/native-tls",
  "sigstore-oidc/native-tls",
  "sigstore-tsa/native-tls",
]
# Enable automatic browser opening for authentication
browser = ["sigstore-oidc/browser"]
