[package]
name = "sigstore-trust-root"
description = "Sigstore trusted root management and parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["tuf"]
tuf = [
  "sigstore-tuf",
  "tokio",
  "directories",
  "tracing",
]

[dependencies]
# Internal dependencies
sigstore-types = { workspace = true }
sigstore-crypto = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto & Certificates
base64 = { workspace = true }
x509-cert = { workspace = true }
rustls-pki-types = { workspace = true }

# Time handling
jiff = { workspace = true }

# Utilities
hex = { workspace = true }

# TUF feature dependencies (optional). The TUF client (metadata fetch +
# verification) is now provided by the in-workspace `sigstore-tuf` crate, which
# brings its own HTTP transport and (via the `rustls` feature) TLS backend.
sigstore-tuf = { workspace = true, features = ["fetch", "rustls"], optional = true }
tokio = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[[example]]
# Refreshes the embedded TUF data (root.json files, trusted roots, signing
# configs) using the TUF client. See .github/workflows/check-embedded-root.yml.
name = "update-embedded-roots"
required-features = ["tuf"]

[dev-dependencies]
tempfile = "3.27.0"
# For testing
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
